fix bug #40 alignment of input fields

--- a/src/pages/CompanyProfile/components/CompanyDetails/index.less
+++ b/src/pages/CompanyProfile/components/CompanyDetails/index.less
@@ -60,7 +60,7 @@
         &__row {
           display: flex;
           justify-content: space-between;
-          align-items: center;
+          // align-items: center;
           margin-bottom: 20px;
           .viewFormVertical {
             width: fit-content;
@@ -88,9 +88,10 @@
               }
             }
           }
-          // &__textLabel {
-          //   width: 151px;
-          // }
+          &__textLabel {
+            // width: 151px;
+            padding-top: 11px;
+          }
           &__textLabelVertical {
             margin-bottom: 10px;
           }
